Sorted out vertical & horizontal alignment issue in picture

--- a/src/source.less
+++ b/src/source.less
@@ -165,7 +165,8 @@ div.outer-modal {
 
         img {
           display: block;
-          width: 90%;
+          max-width: 90%;
+          max-height: 90%;
           margin: auto;
         }
 
@@ -231,6 +232,7 @@ div.outer-modal {
       width: 247px;
       height: 247px;
       display: block;
+      text-align: center;
 
       span.v-align {
         display: inline-block;
@@ -239,16 +241,9 @@ div.outer-modal {
       }
 
       img {
-        /*margin-top: 17%;*/
         max-width: 237px;
         vertical-align: middle;
         max-height: 240px;
-      }
-
-      img.minus-ninety {
-        margin: 0 auto;
-        height: 250px;
-        width: auto;
       }
     }
 
